--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ordenes-service",
+  "name": "order-service",
   "version": "1.0.0",
-  "description": "Microservicio para gestión de órdenes de venta",
+  "description": "Microservicio para manejar órdenes de venta",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
