--- a/orders-service/package.json
+++ b/orders-service/package.json
@@ -12,7 +12,8 @@
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "axios": "^1.5.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "amqplib": "^0.10.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
