--- a/usuarios-service/package.json
+++ b/usuarios-service/package.json
@@ -13,7 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "amqplib": "^0.10.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
